--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4206,3 +4206,11 @@ animation-direction: alternate;
   border-radius: 50%;
 
 }
+
+#share-buttons img {
+width: 45px;
+padding: 45px;
+border: 0;
+box-shadow: 0;
+display: inline;
+}
